# digital-intercom

./: .gitmodules  README.md  constants.h  sdkconfig.defaults
.github/workflows/: build.yml
components/PN532-combined/: CMakeLists.txt
homebridge/: .gitignore  .npmignore  README.md  config.schema.json  eslint.config.js  package-lock.json  package.json
homebridge/assets/: snapshot.af
homebridge/src/: commands.ts  constants.ts  index.ts  platform.ts  platformAccessory.ts  server.ts  settings.ts  streamingDelegate.ts
homebridge/src/platformAccesories/: doorLock.ts  intercom.ts
intercom/: .env.template  .gitignore  CMakeLists.txt  sdkconfig.defaults
intercom/main/: CMakeLists.txt  idf_component.yml  main.cpp  talk.cpp  talk.h  tcpClient.cpp  tcpClient.h  util.h
main/: Slice.cpp  Slice.h  errors.h  main.cpp
nfc/: .clangd  .gitignore  CMakeLists.txt  sdkconfig.defaults
nfc/components/PN532-combined/: CMakeLists.txt
nfc/main/: CMakeLists.txt  Card.cpp  Card.h  Crypto.cpp  Crypto.h  DigitalID.cpp  DigitalID.h  NFC.cpp  NFC.h  Radio.cpp  Radio.h  Slice.cpp  Slice.h  card.h  errors.h  idf_component.yml  main.cpp  nfc.h  utils.h
tools/: tcp_client.py  tcp_server.py  udp_server.py
tools/multipaz-sandbox/: local.properties  settings.gradle.kts
tools/multipaz-sandbox/app/: build.gradle.kts
tools/multipaz-sandbox/app/src/main/kotlin/la/nisa/: App.kt
tools/multipaz-sandbox/gradle/: libs.versions.toml
